# torchguns

./: .gitignore  BoundingBoxDataset.py  LICENSE  README.md  YOLODataset.py  pyproject.toml  requirements.txt
src/: BoundingBoxDataset.py  HSEDataset.py  HSESubset.py  PersonDataset.py  THGPDataset.py  USRTDataset.py  VideoDataset.py  YOLODataset.py
src/torchguns/: BoundingBoxDataset.py  HSEDataset.py  HSESubset.py  PersonDataset.py  THGPDataset.py  USRTDataset.py  VideoDataset.py  YouTubeGddDataset.py  utils.py
test/: TestMockAttackDataset.py  TestTHGPDataset.py  TestUSRTDataset.py  TestVideoDataset.py  TestYOLODataset.py  TestYouTubeGddDataset.py  testHSEDataset.py  testHSESubset.py  testPeronDataset.py  testTransforms.py  utils.py
test/data/THGP/labels/val2017/: 00000000.txt  00000780.txt
test/data/YouTube-GDD/labels/val/: K_wDSdAb4NI_24_48_000007.txt
test/data/yolo_dataset/: frame_000000.txt
torchguns/: BoundingBoxDataset.py  HSEDataset.py  HSESubset.py  MockAttackDataset.py  PersonDataset.py  THGPDataset.py  USRTDataset.py  VideoDataset.py  YOLODataset.py  YouTubeGddDataset.py
