[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "Torchguns"
version = "0.0.1"
authors = [
  { name="Anton Ganichev", email="gan4x4@gmail.com" },
]
description = "Datasets for weapon detection"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gan4x4/torchguns"
"Bug Tracker" = "https://github.com/Gan4x4/torchguns/issues"