[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "torchguns"
version = "0.0.4"
authors = [
  { name="Anton Ganichev", email="gan4x4@gmail.com" },
]
description = "Datasets for weapon detection"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gan4x4/torchguns"
"Bug Tracker" = "https://github.com/Gan4x4/torchguns/issues"